# fri3d_firmware

components/fri3d_bsp/: CMakeLists.txt
components/fri3d_bsp/include/fri3d_bsp/: bsp.h  bsp_i2c.h  i2cdev.h
components/fri3d_bsp/include/fri3d_bsp/boards/fox/: bsp.h
components/fri3d_bsp/include/fri3d_bsp/boards/octopus/: bsp.h  lis2hh12.h
components/fri3d_bsp/src/: bsp_i2c.c  i2cdev.c
components/fri3d_bsp/src/boards/octopus/: lis2hh12.c
components/fri3d_firmware/: CMakeLists.txt
components/fri3d_firmware/src/: main.c
